# Rust-Raytracer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  rendering.rs  shape.rs  traits.rs  vertors.rs
test_scene/: scene01.json  scene02.json
