[package]
name = "rust_raytracer"
version = "0.1.0"
authors = ["Julian Frabel <julian.frabel@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# image is used to generate the end image
# serde is used to parse the json scene
# clap is used to parse command line arguments

[dependencies]
image = "0.23.2"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
clap = "1.4.1"
